--- a/client/package.json
+++ b/client/package.json
@@ -15,16 +15,17 @@
     "@fontsource/roboto": "^5.2.6",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
-    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query": "^5.85.3",
     "@tanstack/react-query-devtools": "^5.83.0",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
-    "react": "^19.1.0",
+    "react": "^19.1.1",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.7.0",
+    "react-toastify": "^11.0.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
