--- a/client/package.json
+++ b/client/package.json
@@ -16,16 +16,19 @@
     "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@mui/x-date-pickers": "^8.10.2",
     "@tanstack/react-query": "^5.85.3",
     "@tanstack/react-query-devtools": "^5.83.0",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
+    "leaflet": "^1.9.4",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "react": "^19.1.1",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-router": "^7.7.0",
     "react-toastify": "^11.0.5",
     "uuid": "^11.1.0",
@@ -33,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/leaflet": "^1.9.20",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
